--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    "Welcome to papa Mike's restaurant"
+    "Welcome to a restaurant that serves food you can eat"
   </body>
   <script type="text/javascript">
     var app = require("express");
